--- a/tindev/app.json
+++ b/tindev/app.json
@@ -1,4 +1,12 @@
 {
   "name": "tindev",
-  "displayName": "tindev"
+  "displayName": "tindev",
+  "expo": {
+    "name": "tindev",
+    "slug": "tindev",
+    "version": "1.0.0",
+    "assetBundlePatterns": [
+      "**/*"
+    ]
+  }
 }
