--- a/tindev/package.json
+++ b/tindev/package.json
@@ -1,29 +1,30 @@
 {
-  "name": "tindev",
-  "version": "0.0.1",
-  "private": true,
+  "main": "index.js",
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "start": "react-native start",
-    "test": "jest",
-    "lint": "eslint ."
+    "web": "expo start --web",
+    "start": "react-native start"
   },
   "dependencies": {
-    "react": "17.0.1",
-    "react-native": "0.64.1"
+    "@react-native-community/async-storage": "^1.12.1",
+    "axios": "^0.21.1",
+    "expo": "~41.0.1",
+    "expo-splash-screen": "~0.10.2",
+    "expo-status-bar": "~1.0.4",
+    "expo-updates": "~0.5.4",
+    "react": "16.13.1",
+    "react-dom": "16.13.1",
+    "react-native": "~0.63.4",
+    "react-native-gesture-handler": "^1.10.3",
+    "react-native-reanimated": "^2.1.0",
+    "react-native-screens": "~3.0.0",
+    "react-native-unimodules": "~0.13.3",
+    "react-native-web": "~0.13.12",
+    "react-navigation": "^4.4.4"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
-    "@babel/runtime": "^7.12.5",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^26.6.3",
-    "eslint": "7.14.0",
-    "jest": "^26.6.3",
-    "metro-react-native-babel-preset": "^0.64.0",
-    "react-test-renderer": "17.0.1"
+    "@babel/core": "^7.9.0"
   },
-  "jest": {
-    "preset": "react-native"
-  }
+  "private": true
 }
