--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.12.8",
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.7",
+    "socket-io": "^1.0.0",
+    "socket.io": "^4.1.2"
   }
 }
